--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
 /* 
+
+TO DO:
+
 ### Primary
 
 - Light red (CTA text): hsl(356, 100%, 66%)
@@ -23,10 +26,6 @@ Background gradient - body:
 
 - Very dark gray blue: hsl(237, 17%, 21%)
 - Very dark desaturated blue: hsl(237, 23%, 32%)
-
-
-- Family: [Ubuntu](https://fonts.google.com/specimen/Ubuntu?preview.text_type=custom)
-- Weights: 400, 500, 700
  */
 
 *,
