--- a/style.css
+++ b/style.css
@@ -34,13 +34,9 @@ Background gradient - body:
   box-sizing: border-box;
 }
 
-:root {
-}
+/* :root {
+} */
 
 body {
   font: 1em/1.5 "Overpass", "Ubuntu", sans-serif;
-}
-
-a {
-  display: block;
 }
