--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@
 TO DO:
 
 Header background gradient 
+JS - mobile nav logic 
+Alignment on header nav li's compared to buttons
 
 ### Primary
 
@@ -64,7 +66,6 @@ button {
 
 .header {
   min-height: 600px;
-  border: 1px solid;
   border-bottom-left-radius: 120px;
   background: linear-gradient(to top, hsl(356, 100%, 66%), rgba(255, 143, 112)),
     url("/images/bg-pattern-intro.svg");
@@ -76,21 +77,56 @@ button {
 }
 
 .header__flexsb {
-  position: relative;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: relative;
 }
 
 .header__mobilebg-nav-container {
-  background-color: white;
+  width: 100%;
   position: absolute;
   top: 50px;
   left: 50%;
   transform: translateX(-50%);
-  width: 100%;
+  background-color: white;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  padding: 2rem 1rem;
+  margin-top: 1rem;
 }
 
+.header__nav,
+.header__login-signup-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+
+.header-nav__btn {
+  font-weight: 600;
+  font-size: 1.2rem;
+}
+
+.arrow::before {
+  content: url("./images/icon-arrow-dark.svg");
+  display: inline-block;
+}
+
+.header-nav__ul {
+  background-color: rgba(200, 200, 203, 0.3);
+  border-radius: 5px;
+  width: 90%;
+  padding-block: 1rem;
+  margin-block: 1.1rem;
+}
+
+.header-nav__ul a {
+  color: rgba(31, 63, 91, 0.8);
+  font-weight: 600;
+  margin-block: 1rem;
+}
 /* ====================================
                   MAIN
  ====================================== */
@@ -105,8 +141,16 @@ button {
 }
 
 /* ====================================
-              INTERACTIVE
+              INTERACTIVE / STATE
  ====================================== */
+
+.hidden {
+  display: none;
+}
+
+.header-nav__ul a:hover {
+  color: rgba(31, 63, 91);
+}
 
 /* ====================================
               MEDIA QUERIES 
