--- a/style.css
+++ b/style.css
@@ -61,6 +61,10 @@ button {
   color: hsl(208, 49%, 24%);
 }
 
+.white {
+  color: white;
+}
+
 /* ====================================
                 HEADER 
  ====================================== */
@@ -156,9 +160,12 @@ button {
   width: 90%;
 }
 
-.sign-up {
+.header-btn {
   border-radius: 50px;
   padding: 0.8em 1.8em;
+}
+
+.sign-up {
   color: white;
   background-image: linear-gradient(
     to left,
@@ -166,6 +173,58 @@ button {
     rgba(255, 143, 112)
   );
   transition: 400ms;
+}
+
+.header__hero-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  max-width: 390px;
+  margin: 5rem auto;
+}
+
+.hero__flex-parent {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.hero__title {
+  font-size: 2.5rem;
+  line-height: 1.3;
+  margin-bottom: 0;
+  width: 90%;
+}
+
+.hero__description {
+  font-weight: 300;
+  font-size: 1.1rem;
+  margin-top: 0.7rem;
+  width: 70%;
+}
+
+.hero__btns-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.btn-start-free,
+.btn-learn-more {
+  padding: 1rem 1.8rem;
+  transition: 400ms;
+  font-size: 1rem;
+  font-weight: 600;
+}
+
+.btn-start-free {
+  margin-right: 1rem;
+  background-color: white;
+  color: hsl(356, 100%, 66%);
+}
+
+.btn-learn-more {
+  border: 1px solid white;
 }
 /* ====================================
                   MAIN
@@ -192,7 +251,9 @@ button {
   color: rgba(31, 63, 91);
 }
 
-.sign-up:hover {
+.sign-up:hover,
+.btn-start-free:hover,
+.btn-learn-more:hover {
   transform: scale(1.1);
 }
 
