--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
 /* 
 TO DO:
 
+Refactor - max-width in rems, min() for width, flex-direction column 
 Header background gradient - inversed colours
 Hero line widths 
+Inconsistent img sizes 
 JS - mobile nav logic + hiding/showing nav uls
  */
 
@@ -22,6 +24,9 @@ Background gradient - infastructure:
 }
 
 body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
   font: 1rem/1.5 "Overpass", "Ubuntu", sans-serif;
   color: hsl(207, 13%, 34%);
   text-align: center;
@@ -69,6 +74,19 @@ button {
   font-weight: 600;
 }
 
+.h2,
+.h3 {
+  font-size: 2rem;
+  font-family: "Ubuntu";
+  font-weight: 400;
+}
+
+.h3 {
+  line-height: 1.2;
+  margin-bottom: 0.5rem;
+  max-width: 365px;
+}
+
 /* ====================================
                 HEADER 
  ====================================== */
@@ -108,7 +126,10 @@ button {
 .header__nav,
 .header__login-signup-container,
 .hero__flex-parent,
-.header__hero-container {
+.header__hero-container,
+.future-container,
+.infastructure-container,
+.free-container {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -209,8 +230,45 @@ button {
                   MAIN
  ====================================== */
 
-/* .future-container {
-} */
+.main {
+  flex-grow: 1;
+}
+
+.future-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 5.5rem 0 17rem;
+}
+
+.future__title {
+  margin: 0 0 3rem;
+}
+
+.main__flex-parent {
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+  justify-content: center;
+  align-items: center;
+  gap: 1.5rem;
+}
+
+.main__flex-child {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.content-width {
+  width: 85%;
+  line-height: 1.8;
+  font-weight: 300;
+}
+
+.infastructure-container {
+  outline: 1px solid;
+}
 
 /* ====================================
                   FOOTER 
