--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 /* 
 TO DO:
 
+Refactor - border-radius 120px 
+Footer - flex-wrap 
 Header background gradient - inversed colours
 Hero line widths 
 Inconsistent img sizes - <picture>
@@ -125,7 +127,8 @@ button {
 .infastructure-container,
 .free-container,
 .main__flex-parent,
-.main__flex-child {
+.main__flex-child,
+.footer-content-wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -274,13 +277,42 @@ button {
   font-size: 2.6rem;
 }
 
+.free-container {
+  padding: 4rem 0 5rem;
+}
+
+.free-open-subtitle {
+  margin-top: 1rem;
+}
+
 /* ====================================
                   FOOTER 
  ====================================== */
 
 .footer {
+  padding-block: 4rem;
   background-color: hsl(240, 10%, 16%);
   color: hsl(240, 2%, 79%);
+  border-top-right-radius: 120px;
+}
+
+.footer__nav {
+  margin-top: 3.5rem;
+}
+
+.footer-nav__ul:not(:last-child) {
+  margin-bottom: 2rem;
+}
+
+.footer-nav-ul__heading {
+  margin-bottom: 1.5rem;
+  color: white;
+  font-size: 1.1rem;
+}
+
+.footer-nav__ul a {
+  font-weight: normal;
+  line-height: 2;
 }
 
 /* ====================================
