--- a/style.css
+++ b/style.css
@@ -1,10 +1,8 @@
 /* 
 TO DO:
 
-Refactor - border-radius 120px 
-Footer - flex-wrap 
+Refactor - class for flex-display 
 Header background gradient - inversed colours
-Hero line widths 
 Inconsistent img sizes - <picture>
 JS - mobile nav logic + hiding/showing nav uls
  */
@@ -89,7 +87,7 @@ button {
 
 .header {
   min-height: 37.5rem;
-  border-bottom-left-radius: 120px;
+  border-bottom-left-radius: 7.5rem;
   background: linear-gradient(to top, hsl(356, 100%, 66%), rgba(255, 143, 112)),
     url("/images/bg-pattern-intro.svg");
   background-position: 35% 35%;
@@ -127,8 +125,7 @@ button {
 .infastructure-container,
 .free-container,
 .main__flex-parent,
-.main__flex-child,
-.footer-content-wrapper {
+.main__flex-child {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -192,19 +189,18 @@ button {
 }
 
 .header__hero-container {
-  max-width: 24.38rem;
+  width: 90%;
   margin: 5rem auto;
 }
 
 .hero__title {
-  width: 90%;
   margin-bottom: 0;
   font-size: 2.5rem;
   line-height: 1.3;
 }
 
 .hero__description {
-  width: 70%;
+  width: 80%;
   margin-top: 0.7rem;
   font-weight: 300;
   font-size: 1.1rem;
@@ -256,8 +252,8 @@ button {
   min-height: 39.38rem;
   justify-content: center;
   position: relative;
-  border-bottom-left-radius: 120px;
-  border-top-right-radius: 120px;
+  border-bottom-left-radius: 7.5rem;
+  border-top-right-radius: 7.5rem;
   background: url("/images/bg-pattern-circles.svg") no-repeat center 330% / 160%,
     linear-gradient(to bottom, hsl(237, 17%, 21%), hsl(237, 23%, 32%)), center;
 }
@@ -293,15 +289,22 @@ button {
   padding-block: 4rem;
   background-color: hsl(240, 10%, 16%);
   color: hsl(240, 2%, 79%);
-  border-top-right-radius: 120px;
+  border-top-right-radius: 7.5rem;
+}
+
+.footer-logo {
+  margin: 0 auto;
 }
 
 .footer__nav {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
   margin-top: 3.5rem;
 }
 
-.footer-nav__ul:not(:last-child) {
-  margin-bottom: 2rem;
+.footer-nav__ul {
+  flex: 1 1 300px;
 }
 
 .footer-nav-ul__heading {
