--- a/style.css
+++ b/style.css
@@ -1,18 +1,15 @@
 /* 
 TO DO:
 
-Refactor - class for flex-display 
-Inconsistent img sizes - convert to background imgs + px sizing (1000 - REM!) 
-JS - mobile nav logic + hiding/showing nav uls 
+Refactor - class for flex-display | REMS for px 
+Inconsistent img sizes - convert to background imgs + px sizing (1000px - REM!) 
+JS - mobile nav logic + hiding/showing nav uls + bug when to wider 
 
 Wider: 
 
-Left alignment of phones img - with future txt content
+Left alignment of phones img - with future txt content + when infastructure heading wraps 
 Exact height + spacing for future + free container 
 
- */
-
-/*  
 rgba(255, 61, 84) 
  */
 
@@ -198,7 +195,7 @@ button {
 
 .hero__title {
   margin-bottom: 0;
-  font-size: 2.5rem;
+  font-size: 2.4rem;
   line-height: 1.3;
 }
 
@@ -478,7 +475,6 @@ button:hover {
   /* ================ MAIN ================= */
 
   .main__flex-parent {
-    /* outline: 2px solid black; */
     max-width: 1100px;
   }
 
@@ -487,14 +483,20 @@ button:hover {
   }
 
   .main__flex-child {
-    /* outline: 2px solid black; */
     align-items: unset;
   }
 
+  .future__swiggle-img,
+  .free__laptop-img {
+    display: none;
+  }
+
   .future-container {
-    margin: 5rem 0 0;
-    padding-inline: 0.5rem;
-    /*========= BEWARE OF THIS!! ============ */
+    margin: 0;
+    padding: 7rem 0.5rem; /*========= BEWARE OF THIS!! ============ */
+    background: white url("./images/illustration-editor-desktop.svg") no-repeat;
+    background-position: 320% 60%;
+    background-size: 85% 80%;
   }
 
   .future-container section {
@@ -502,7 +504,7 @@ button:hover {
   }
 
   .future__title {
-    margin: -1rem 0 0;
+    margin: -3rem 0 0;
   }
   .future__swiggle-child {
     order: 2;
@@ -518,16 +520,12 @@ button:hover {
   }
 
   .infastructure-container {
-    min-height: 25rem;
-    padding-block: 3rem;
+    min-height: unset;
+    padding-bottom: 3rem;
     position: static;
     background: url("/images/bg-pattern-circles.svg") no-repeat -320px -820px /
         100%,
       linear-gradient(to right, hsl(237, 17%, 21%), hsl(237, 23%, 32%)), center;
-  }
-
-  .infastructure-container section {
-    margin: 0;
   }
 
   .infastructure__phones-parent {
@@ -535,18 +533,22 @@ button:hover {
   }
 
   .infastructure__phones-img {
-    top: -110px;
+    top: -155px;
     left: 0%;
     width: 470px;
   }
 
   .infastructure__title {
     font-size: 2.4rem;
+    margin-top: 0;
   }
 
   .free-container {
-    margin: 8rem 0 0;
-    padding: 8rem 0 17rem;
+    margin: 0;
+    padding: 7rem 0.5rem;
+    background: white url("./images/illustration-laptop-desktop.svg") no-repeat;
+    background-position: -200% 60%;
+    background-size: 85% 80%;
   }
 
   .free-container section {
@@ -578,7 +580,7 @@ button:hover {
           MEDIA QUERIE - WIDE 
  ====================================== */
 
-@media (min-width: 1250px) {
+@media (min-width: 1100px) {
   .header__flexsb {
     width: 80%;
     margin: 0 auto;
@@ -588,15 +590,6 @@ button:hover {
     background: white url("./images/illustration-editor-desktop.svg") no-repeat;
     background-position: 155% 0%;
     background-size: 65% 92%;
-  }
-
-  .future__swiggle-img,
-  .free__laptop-img {
-    display: none;
-  }
-
-  .infastructure__phones-img {
-    top: -140px;
   }
 
   .free-container {
