--- a/style.css
+++ b/style.css
@@ -73,13 +73,17 @@ button {
 
 .h2,
 .h3 {
-  font-size: clamp(2rem, 6vw, 2.5rem);
   font-family: "Ubuntu";
   font-weight: 400;
   max-width: 22.81rem;
 }
 
+.h2 {
+  font-size: clamp(2rem, 6vw, 2.7rem);
+}
+
 .h3 {
+  font-size: clamp(2rem, 6vw, 2.5rem);
   line-height: 1.2;
   margin-bottom: 0.5rem;
 }
@@ -196,7 +200,7 @@ button {
 
 .hero__title {
   margin-bottom: 0;
-  font-size: 2.4rem;
+  font-size: clamp(2.4rem, 7vw, 4rem);
   line-height: 1.3;
 }
 
@@ -204,7 +208,7 @@ button {
   width: 80%;
   margin-top: 0.7rem;
   font-weight: 300;
-  font-size: 1.1rem;
+  font-size: clamp(1rem, 2.5vw, 1.3rem);
 }
 
 .btn-start-free,
@@ -280,7 +284,7 @@ button {
 .infastructure__title {
   margin-bottom: 0.4rem;
   font-weight: 500;
-  font-size: 2.6rem;
+  font-size: clamp(2.6rem, 8vw, 3.1rem);
 }
 
 .free-container {
