--- a/style.css
+++ b/style.css
@@ -11,8 +11,6 @@ Refactor:
 
 Class for flex-display | REMS for px 
 Feature queries for clamp() 
-
-rgba(255, 61, 84) 
  */
 
 *,
@@ -354,8 +352,19 @@ button {
 }
 
 a:hover,
-button:hover {
-  transform: scale(1.1);
+.header-nav__btn:hover {
+  text-decoration: underline;
+}
+
+.btn-start-free:hover,
+.sign-up:hover {
+  color: white;
+  background-color: #ff7573;
+}
+
+.btn-learn-more:hover {
+  color: rgba(255, 61, 84);
+  background-color: white;
 }
 
 /* ====================================
@@ -576,7 +585,7 @@ button:hover {
   }
 
   .free-container section {
-    margin-top: 2.7rem;
+    margin-top: -1rem;
   }
 
   .footer-nav__ul {
