Mobile logic completed

--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@ TO DO:
 
 Wider: 
 
-White arrows
 Max-width of future + free containers - but not on infastructure (stop wide spacing with background imgs) 
+Change header gradient img on v.wide screens too - not too stretched
 
 Refactor:
 
